# nl-mgo-dva-mock

./: .coveragerc  .gitignore  HOSTING_CHANGELOG.md  Makefile  README.md  app.conf.example  app.conf.test  pyproject.toml  sonar-project.properties  version.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  release-package-venv.yaml  release-package.yaml  release-packages.yaml
app/: bindings.py  constants.py  main.py  path.py
app/authentication/: exceptions.py  responses.py  routers.py  schemas.py  services.py
app/config/: models.py
app/hcim/: constants.py  endpoints.json  factories.py  matchers.py  schemas.py  services.py
app/routers/: resource_router.py
app/telemetry/: jaeger_provider.py
app/version/: router.py
docker/: Dockerfile  entrypoint.sh
fhir/: models.py  scanner.py
fhir/resources/AllergyIntolerance/: zib-allergyintolerance-01.json
fhir/resources/BGGZ/: 1-Patient.json  10-LivingSituation.json  14-HelpFromOthers.json  19-CareTeam.json  3-TreatmentDirective.json  8-AlcoholUse.json
fhir/resources/BGLZ/: 4-Problem.json  5-AllergyIntolerance.json  6-LaboratoryTestResult.json
fhir/resources/BGZ/: 10-1-MedicationUse.json  13-1-Bloodpressure.json  13-2-Bodyweight.json  13-3-Bodyheight.json  15-Procedure.json  17-PlannedImmunization.json  17-PlannedProcedure.json  2-Payer.json  7-1-LivingSituation.json  7-3-AlcoholUse.json  7-4-TobaccoUse.json  8-Alert.json  9-AllergyIntolerance.json
fhir/resources/Condition/: zib-problem-06.json  zib-problem-07.json  zib-problem-09.json
fhir/resources/Consent/: zib-advancedirective-01.json  zib-advancedirective-03.json  zib-treatmentdirective-01.json  zib-treatmentdirective-02.json
fhir/resources/Device/: zib-medicaldeviceproduct-01.json
fhir/resources/DeviceUseStatement/: zib-medicaldevice-01.json
fhir/resources/Flag/: zib-alert-01.json
fhir/resources/GPData/: 01-Patient.json  04-EpisodeOfCare.json  08-MedicationRequest.json  09-AllergyIntolerance.json  11-Observation.json  12-Composition.json  13-Encounter.json
fhir/resources/Immunization/: zib-vaccination-01.json  zib-vaccination-02.json
fhir/resources/MedicationDispense/: zib-administrationagreement-01.json
fhir/resources/MedicationRequest/: zib-medicationagreement-02.json
fhir/resources/MedicationStatement/: zib-medicationuse-01.json
fhir/resources/NutritionOrder/: zib-nutritionadvice-01.json
fhir/resources/Observation/: zib-bloodpressure-02.json  zib-bodyweight-01.json  zib-druguse-01.json  zib-livingsituation-01.json
fhir/resources/PDFA/: 1-DocumentReference.json  2-DocumentManifest.json
scripts/: build_package.sh  setup_env.sh
tests/: conftest.py
tests/app/: test_bindings.py  test_dataservices.py  test_main.py  test_path.py
tests/app/authentication/: test_routers.py  (+2 more)
tests/fhir/: test_scanner.py
(+142 files in other folders)
